--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,47 @@
 body {
-  font-size: 200px;
+  background-color: #03bffe;
+
 }
 
+.photos {
+  width: 638px;
+  height: 426px;
+}
 
+ul {
+  display: block;
+  width: 100%;
+  border: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+}
 
-h1 {
-font : 100px;
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 10px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+
+.active {
+  background-color: #4CAF50;
+}
+
+footer {
+  margin-top: 80%;
 }
