--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,22 @@
-body {
-  background-color: #03bffe;
-
+h1 {
+  display: block;
+  margin: 10;
+  padding: 0;
+  text-align: center;
+  font-family: 'Rock Salt', cursive;
+  font-size: 50px;
+  color: #473367;
 }
 
-.photos {
-  width: 638px;
-  height: 426px;
+body {
+  background-color: cyan;
+}
+
+.podcast_image {
+  display: block;
+  margin-top: 5%;
+  width: 50%;
+  height: 50%;
 }
 
 ul {
@@ -16,7 +27,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: coral;
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
@@ -35,7 +46,7 @@ li a {
 }
 
 li a:hover {
-  background-color: #111;
+  background-color: red;
 }
 
 .active {
