--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-h1 {
+.augmentedPerspective {
   display: block;
   margin: 10;
   padding: 0;
@@ -12,14 +12,7 @@ body {
   background-color: cyan;
 }
 
-.podcast_image {
-  display: block;
-  margin-top: 5%;
-  width: 50%;
-  height: 50%;
-}
-
-ul {
+.navbar {
   display: block;
   width: 100%;
   border: none;
@@ -28,9 +21,10 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: coral;
-  position: -webkit-sticky; /* Safari */
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
+  font-family: 'Oswald', sans-serif;
 }
 
 li {
@@ -52,7 +46,49 @@ li a:hover {
 .active {
   background-color: #4CAF50;
 }
-
 footer {
   margin-top: 80%;
+}
+
+.share-list {
+  display: flex;
+  flex-direction: row;
+}
+
+.share-list a {
+  border-radius: 100px;
+  width: 100px;
+  height: 100px;
+  padding: 7px;
+  margin: 10px;
+  cursor: pointer;
+  overflow: hidden;
+
+  img {
+    width: 10%;
+    height: 10%;
+    filter: invert(100%);
+  }
+}
+
+a.fb-h { background: #3B5998; }
+a.tw-h { background: #00acee; }
+a.ig-h { background: #c8232c; }
+a.em-h { background: #FF5700; }
+
+
+// Page Styling
+* {
+  margin: 0;
+  pading: 0;
+  box-sizing: border-box;
+}
+
+.share-buttons-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: cyan;
+  width: 100%;
+  height: 100%;
 }
