--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,42 @@
   text-align: center;
   font-family: 'Rock Salt', cursive;
   font-size: 50px;
-  color: #473367;
+  color: cyan;
 }
 
 body {
   background-color: cyan;
+  background-image: url("https://www.sopapeldeparede.com.br/wp-content/uploads/2019/07/4820b1b0cb074261f04538be6eafd0de.jpg?w=640");
+  background-color: #cccccc;
+  height: 200%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  color : white;
+  max-width:100%
+}
+
+p {
+  text-align: center;
+  font-size : 24px;
+  font-family: Arial;
+}
+
+.not_a_logo {
+  border-radius: 20%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 20%;
+  align-self: auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* properties of the navigation bar and of lists*/
@@ -30,6 +61,7 @@ body {
 
 li {
   float: left;
+  max-width:100%
 }
 
 li a {
@@ -38,6 +70,7 @@ li a {
   text-align: center;
   padding: 14px 10px;
   text-decoration: none;
+  max-width:100%
 }
 
 li a:hover {
@@ -57,6 +90,7 @@ li a:hover {
   text-align: center;
   padding: 14px 100px;
   text-decoration: none;
+  max-width:100%
 }
 
 .instagram a:hover {
@@ -77,11 +111,13 @@ li a:hover {
 
 footer {
   margin-top: 80%;
+  max-width: 100%;
 }
 
 .share-list {
   display: flex;
   flex-direction: row;
+  max-width:100%
 }
 
 .share-list a {
@@ -111,13 +147,13 @@ a.em-h { background: #FF5700; }
   margin: 0;
   pading: 0;
   box-sizing: border-box;
+  max-width:100%
 }
 
 .share-buttons-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: cyan;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
