--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,13 @@
   font-size: 50px;
   color: cyan;
 }
+html{
+  box-sizing: border-box;
+}
 
 body {
   background-color: cyan;
-  background-image: url("https://www.sopapeldeparede.com.br/wp-content/uploads/2019/07/4820b1b0cb074261f04538be6eafd0de.jpg?w=640");
+  background-image: url("img/background.png");
   background-color: #cccccc;
   height: 200%;
   background-position: center;
@@ -32,7 +35,8 @@ p {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 20%;
+  max-width: 50%;
+  max-height: 50%;
   align-self: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -41,6 +45,8 @@ img{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  align-self: auto;
+  max-width: 50%;
 }
 
 /* properties of the navigation bar and of lists*/
@@ -57,6 +63,7 @@ img{
   position: sticky;
   top: 0;
   font-family: 'Oswald', sans-serif;
+  font-size: 24px;
 }
 
 li {
@@ -73,8 +80,9 @@ li a {
   max-width:100%
 }
 
-li a:hover {
-  background-color: red;
+.navbar li a:hover {
+  font-style: italic;
+  background-image: url("img/background.png");
 }
 
 .active {
@@ -114,33 +122,46 @@ footer {
   max-width: 100%;
 }
 
-.share-list {
-  display: flex;
-  flex-direction: row;
-  max-width:100%
-}
-
-.share-list a {
-  border-radius: 100px;
-  width: 100px;
-  height: 100px;
-  padding: 7px;
-  margin: 10px;
-  cursor: pointer;
-  overflow: hidden;
-
-  img {
-    width: 10%;
-    height: 10%;
-    filter: invert(100%);
-  }
-}
-
 a.fb-h { background: #3B5998; }
 a.tw-h { background: #00acee; }
 a.ig-h { background: #c8232c; }
 a.em-h { background: #FF5700; }
 
+/* properties of the sharing buttons */
+
+#menu-outer {
+	max-width: 100%;
+  align-self: auto;
+}
+
+.table {
+	display: table;   /* Allow the centering to work */
+	margin: 0 auto;
+  align-self: auto;
+}
+
+ul#horizontal-list {
+	list-style: none;
+	padding-top: 20px;
+  align-self: auto;
+
+	}
+
+ul#horizontal-list li {
+		display: inline;
+    margin : 20px;
+    max-width: 100%;
+    align-self: auto;
+	}
+
+.sharing li a{
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+}
+.sharing li a:hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  }
 
 // Page Styling
 * {
@@ -148,12 +169,4 @@ a.em-h { background: #FF5700; }
   pading: 0;
   box-sizing: border-box;
   max-width:100%
-}
-
-.share-buttons-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 100%;
-  max-height: 100%;
 }
