--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,14 @@
   font-size: 50px;
   color: cyan;
 }
+
+a {
+  text-decoration: none;
+  text-decoration-color: none;
+  color: inherit;
+}
+
+
 html{
   box-sizing: border-box;
 }
@@ -41,13 +49,10 @@ p {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  align-self: auto;
-  max-width: 50%;
+.center-image {
+  text-align: center;
 }
+
 
 /* properties of the navigation bar and of lists*/
 .navbar {
