--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ p {
   max-width: 50%;
   max-height: 50%;
   align-self: auto;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 }
 
 .center-image {
