changed the logo and the titles

--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,9 @@
   margin: 10;
   padding: 0;
   text-align: center;
-  font-family: 'Rock Salt', cursive;
+  font-family:Oswald;
   font-size: 50px;
-  color: cyan;
+  color: coral;
 }
 
 a {
